<resources>
    <string name="app_name">Calculator</string>
    <string name="default_value_hint">0</string>
    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_negative_number">+/-</string>
    <string name="button_comma">,</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_multiply">*</string>
    <string name="button_divide">/</string>
    <string name="button_equals">=</string>
    <string name="button_square_root">√x</string>
    <string name="button_1_divide_x">1/x</string>
    <string name="button_log">log</string>
    <string name="button_fact">!</string>
    <string name="button_square_degree">x^2</string>
    <string name="button_degree">x^y</string>
    <string name="button_ln">ln</string>
    <string name="button_delete">del</string>
    <string name="button_clear">C</string>
    <string name="button_mod">mod</string>
    <string name="button_exp">e</string>
</resources>