<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3E3E7"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/currentOperationView"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:textAlignment="viewEnd"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">
        <Button
            android:textSize="10sp"
            android:id="@+id/button_fact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="25"
            android:text="@string/button_fact"
            app:layout_constraintBottom_toTopOf="@+id/button_square_root"
            app:layout_constraintStart_toStartOf="parent" />
        <Button
            android:textSize="10sp"
            android:id="@+id/button_square_degree"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="25"
            android:text="@string/button_square_degree"
            app:layout_constraintBottom_toTopOf="@+id/button_1_divide_x"
            app:layout_constraintStart_toEndOf="@+id/button_fact" />
        <Button
            android:textSize="10sp"
            android:id="@+id/button_degree"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="25"
            android:text="@string/button_degree"
            app:layout_constraintBottom_toTopOf="@+id/button_log"
            app:layout_constraintStart_toEndOf="@+id/button_square_degree" />
        <Button
            android:textSize="10sp"
            android:id="@+id/button_ln"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="25"
            android:text="@string/button_ln"
            app:layout_constraintBottom_toTopOf="@+id/button_divide"
            app:layout_constraintStart_toEndOf="@+id/button_degree" />
    </LinearLayout>

    <TextView
        android:id="@+id/editTextNumber"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/default_value_hint"
        android:textAlignment="viewEnd"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/button_mod"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="25"
            android:text="@string/button_mod"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@+id/button_fact"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:textSize="10sp"
            android:id="@+id/button_exp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="25"
            android:text="@string/button_exp"
            app:layout_constraintBottom_toTopOf="@+id/button_square_degree"
            app:layout_constraintStart_toEndOf="@+id/button_mod"/>

        <Button
            android:textSize="10sp"
            android:id="@+id/button_clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="25"
            android:text="@string/button_clear"
            app:layout_constraintBottom_toTopOf="@+id/button_degree"
            app:layout_constraintStart_toEndOf="@+id/button_exp"/>

        <Button
            android:textSize="10sp"
            android:id="@+id/button_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="25"
            android:text="@string/button_delete"
            app:layout_constraintBottom_toTopOf="@+id/button_ln"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_clear"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <Button
            android:textSize="10sp"
            android:id="@+id/button_square_root"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="25"
            android:text="@string/button_square_root"
            app:layout_constraintBottom_toTopOf="@+id/button_7"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:textSize="10sp"
            android:id="@+id/button_1_divide_x"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="25"
            android:text="@string/button_1_divide_x"
            app:layout_constraintBottom_toTopOf="@+id/button_8"
            app:layout_constraintStart_toEndOf="@+id/button_square_root" />

        <Button
            android:textSize="10sp"
            android:id="@+id/button_log"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="25"
            android:text="@string/button_log"
            app:layout_constraintBottom_toTopOf="@+id/button_9"
            app:layout_constraintStart_toEndOf="@+id/button_1_divide_x" />

        <Button
            android:textSize="10sp"
            android:id="@+id/button_divide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="25"
            android:text="@string/button_divide"
            app:layout_constraintBottom_toTopOf="@+id/button_multiply"
            app:layout_constraintStart_toEndOf="@+id/button_log" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <Button
            android:textSize="10sp"
            android:id="@+id/button_7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="25"
            android:backgroundTint="@color/numbers_color"
            android:text="@string/button_7"
            app:layout_constraintBottom_toTopOf="@+id/button_4"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:textSize="10sp"
            android:id="@+id/button_8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="25"
            android:backgroundTint="@color/numbers_color"
            android:text="@string/button_8"
            app:layout_constraintBottom_toTopOf="@+id/button_5"
            app:layout_constraintStart_toEndOf="@+id/button_7" />

        <Button
            android:textSize="10sp"
            android:id="@+id/button_9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="25"
            android:backgroundTint="@color/numbers_color"
            android:text="@string/button_9"
            app:layout_constraintBottom_toTopOf="@+id/button_6"
            app:layout_constraintStart_toEndOf="@+id/button_8" />

        <Button
            android:textSize="10sp"
            android:id="@+id/button_multiply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="25"
            android:text="@string/button_multiply"
            app:layout_constraintBottom_toTopOf="@+id/button_minus"
            app:layout_constraintStart_toEndOf="@+id/button_9" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <Button
            android:textSize="10sp"
            android:id="@+id/button_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="25"
            android:backgroundTint="@color/numbers_color"
            android:text="@string/button_4"
            app:layout_constraintBottom_toTopOf="@+id/button_1"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:textSize="10sp"
            android:id="@+id/button_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="25"
            android:backgroundTint="@color/numbers_color"
            android:text="@string/button_5"
            app:layout_constraintBottom_toTopOf="@+id/button_2"
            app:layout_constraintStart_toEndOf="@+id/button_4" />

        <Button
            android:textSize="10sp"
            android:id="@+id/button_6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="25"
            android:backgroundTint="@color/numbers_color"
            android:text="@string/button_6"
            app:layout_constraintBottom_toTopOf="@+id/button_3"
            app:layout_constraintStart_toEndOf="@+id/button_5" />

        <Button
            android:textSize="10sp"
            android:id="@+id/button_plus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="25"
            android:text="@string/button_plus"
            app:layout_constraintBottom_toTopOf="@+id/button_equals"
            app:layout_constraintStart_toEndOf="@+id/button_3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/heig"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <Button
            android:textSize="10sp"
            android:id="@+id/button_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="25"
            android:backgroundTint="@color/numbers_color"
            android:text="@string/button_1"
            app:layout_constraintBottom_toTopOf="@+id/button_negative_number"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:textSize="10sp"
            android:id="@+id/button_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="25"
            android:backgroundTint="@color/numbers_color"
            android:text="@string/button_2"
            app:layout_constraintBottom_toTopOf="@+id/button_0"
            app:layout_constraintStart_toEndOf="@+id/button_1" />

        <Button
            android:textSize="10sp"
            android:id="@+id/button_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="25"
            android:backgroundTint="@color/numbers_color"
            android:text="@string/button_3"
            app:layout_constraintBottom_toTopOf="@+id/button_comma"
            app:layout_constraintStart_toEndOf="@+id/button_2" />

        <Button
            android:textSize="10sp"
            android:id="@+id/button_minus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="25"
            android:text="@string/button_minus"
            app:layout_constraintBottom_toTopOf="@+id/button_plus"
            app:layout_constraintStart_toEndOf="@+id/button_6" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/heig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <Button
            android:textSize="10sp"
            android:id="@+id/button_negative_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="45dp"
            android:layout_weight="25"
            android:backgroundTint="@color/numbers_color"
            android:text="@string/button_negative_number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:textSize="10sp"
            android:id="@+id/button_0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="45dp"
            android:layout_weight="25"
            android:backgroundTint="@color/numbers_color"
            android:text="@string/button_0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_negative_number" />

        <Button
            android:textSize="10sp"
            android:id="@+id/button_comma"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="45dp"
            android:layout_weight="25"
            android:backgroundTint="@color/numbers_color"
            android:text="@string/button_comma"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_0" />

        <Button
            android:textSize="10sp"
            android:id="@+id/button_equals"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="45dp"
            android:layout_weight="25"
            android:text="@string/button_equals"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_comma" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>